fix spacing

--- a/src/theme.css
+++ b/src/theme.css
@@ -10,7 +10,7 @@
 	--header-item-height: 2rem;
 	--header-svg-height: 24px;
 	--search-input-max-size: 400px;
-	--header-height: 4em;
+	--header-height: 3.8em;
 }
 
 /* -- color -- */
